--- a/SaajidLab5/src/main/res/layout/fragment_definition.xml
+++ b/SaajidLab5/src/main/res/layout/fragment_definition.xml
@@ -14,7 +14,7 @@
         android:text="@string/hello"
         android:textColor="#ffff00"
         android:layout_gravity="center"
-        android:id="@+id/concepts"/>
+        android:id="@+id/Saajidconcepts"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,6 +22,6 @@
         android:textColor="#ffffff"
         android:text="@string/hello1"
         android:textSize="70sp"
-        android:id="@+id/definition"/>
+        android:id="@+id/Saajiddefinition"/>
 
 </LinearLayout>
